--- a/Project_4_Wrangle and analyze data/data-wrangling-template.ipynb
+++ b/Project_4_Wrangle and analyze data/data-wrangling-template.ipynb
@@ -16,12 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import zipfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract all contents from zip file\n",
+    "with zipfile.ZipFile('armenian-online-job-postings.zip', mode = 'r', ) as myzip:\n",
+    "    myzip.extractall()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
