feat: Define data cleaning tasks

--- a/Project_4_Wrangle and analyze data/data-wrangling-template.ipynb
+++ b/Project_4_Wrangle and analyze data/data-wrangling-template.ipynb
@@ -650,6 +650,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Select all records in the StartDate column that have \"As soon as possible\", \"Immediately\", etc and replace the text in those cells with \"ASAP\".\n",
+    "* Select all nondescriptive and misspelled heades(ApplicationP, AboutC, RequiredQual, JobRequirment)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Code"
    ]
   },
