feat: Rename nondescriptive and misspelled headers

--- a/Project_4_Wrangle and analyze data/data-wrangling-template.ipynb
+++ b/Project_4_Wrangle and analyze data/data-wrangling-template.ipynb
@@ -663,10 +663,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Select all nondescriptive and misspelled heades(ApplicationP, AboutC, RequiredQual, JobRequirment)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean = df_clean.rename(columns={'ApplicationP': 'ApplicationProcedure', 'AboutC':'AboutCompany', \\\n",
+    "                                    'RequiredQual':'', 'JobRequirment':'JobRequirement'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
