feat: Replace text in StartDate with ASAP

--- a/Project_4_Wrangle and analyze data/data-wrangling-template.ipynb
+++ b/Project_4_Wrangle and analyze data/data-wrangling-template.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "Name: Year, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
    "metadata": {},
    "source": [
     "* Select all records in the StartDate column that have \"As soon as possible\", \"Immediately\", etc and replace the text in those cells with \"ASAP\".\n",
-    "* Select all nondescriptive and misspelled heades(ApplicationP, AboutC, RequiredQual, JobRequirment)"
+    "* Select all nondescriptive and misspelled headers(ApplicationP, AboutC, RequiredQual, JobRequirment)"
    ]
   },
   {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,25 +674,149 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Select all nondescriptive and misspelled heades(ApplicationP, AboutC, RequiredQual, JobRequirment)"
+    "* Select all nondescriptive and misspelled headers(ApplicationP, AboutC, RequiredQual, JobRequirment)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean = df_clean.rename(columns={'ApplicationP': 'ApplicationProcedure', 'AboutC':'AboutCompany', \\\n",
-    "                                    'RequiredQual':'', 'JobRequirment':'JobRequirement'})"
+    "df_clean = df_clean.rename(columns={'ApplicationP': 'ApplicationProcedure', \n",
+    "                                    'AboutC':'AboutCompany',\n",
+    "                                    'RequiredQual':'RequiredQualifications',\n",
+    "                                    'JobRequirment':'JobRequirement'})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Select all records in the StartDate column that have \"As soon as possible\", \"Immediately\", etc and replace the text in those cells with \"ASAP\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ASAP                                                                                                                                                      4754\n",
+       "Immediately                                                                                                                                                773\n",
+       "As soon as possible                                                                                                                                        543\n",
+       "Upon hiring                                                                                                                                                261\n",
+       "Immediate                                                                                                                                                  259\n",
+       "Immediate employment                                                                                                                                       140\n",
+       "As soon as possible.                                                                                                                                        32\n",
+       "01 September 2012                                                                                                                                           31\n",
+       "March 2006                                                                                                                                                  27\n",
+       "November 2006                                                                                                                                               22\n",
+       "January 2010                                                                                                                                                19\n",
+       "Immediate job opportunity                                                                                                                                   17\n",
+       "01 February 2005                                                                                                                                            17\n",
+       "February 2014                                                                                                                                               17\n",
+       "September 2010                                                                                                                                              16\n",
+       "February 2011                                                                                                                                               16\n",
+       "TBD                                                                                                                                                         16\n",
+       "March 2011                                                                                                                                                  15\n",
+       "September 2008                                                                                                                                              15\n",
+       "February 2007                                                                                                                                               14\n",
+       "01 February 2015                                                                                                                                            14\n",
+       "01 July 2014                                                                                                                                                14\n",
+       "January 2016                                                                                                                                                13\n",
+       "01 September 2010                                                                                                                                           13\n",
+       "01 March 2006                                                                                                                                               13\n",
+       "01 September 2008                                                                                                                                           13\n",
+       "01 March 2012                                                                                                                                               12\n",
+       "01 April 2014                                                                                                                                               12\n",
+       "Fall 2010                                                                                                                                                   12\n",
+       "01 October 2008                                                                                                                                             12\n",
+       "                                                                                                                                                          ... \n",
+       "15 July 2007                                                                                                                                                 1\n",
+       "December 2014                                                                                                                                                1\n",
+       "28 February 2013                                                                                                                                             1\n",
+       "7 May  2012                                                                                                                                                  1\n",
+       "Anticipated starting date of the assignment is March\\r\\n2008.                                                                                                1\n",
+       "08 July 2013                                                                                                                                                 1\n",
+       "First contract will be concluded for up to 3 months,\\r\\nand then the successful candidate will be hired for longer term.                                     1\n",
+       "28 August 2006                                                                                                                                               1\n",
+       "05 May 2015                                                                                                                                                  1\n",
+       "November 2012                                                                                                                                                1\n",
+       "Summer 2007                                                                                                                                                  1\n",
+       "21 December 2006                                                                                                                                             1\n",
+       "09 March 2015                                                                                                                                                1\n",
+       "November, 2006                                                                                                                                               1\n",
+       "Januray 2015                                                                                                                                                 1\n",
+       "July 2015 (Starting from May 2015 the selected\\r\\ncandidates will be involved in a paid training process to fully prepare\\r\\nfor taking the position).       1\n",
+       "28 and 29 October 2009, at 18:30                                                                                                                             1\n",
+       "July, 2004                                                                                                                                                   1\n",
+       "31 August 2006                                                                                                                                               1\n",
+       "Mid May                                                                                                                                                      1\n",
+       "07 March 2005, 16:30 PM                                                                                                                                      1\n",
+       "April/May 2009                                                                                                                                               1\n",
+       "15 August 2014                                                                                                                                               1\n",
+       "15 August 2015                                                                                                                                               1\n",
+       "06 June 2007                                                                                                                                                 1\n",
+       "Approximately 15 February 2012                                                                                                                               1\n",
+       "30 June  2005                                                                                                                                                1\n",
+       "14 July 2014                                                                                                                                                 1\n",
+       "09 August 04                                                                                                                                                 1\n",
+       "Late September                                                                                                                                               1\n",
+       "Name: StartDate, Length: 1186, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean.StartDate.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "asap_list = ['Immediately', 'As soon as possible', 'Upon hiring',\n",
+    "             'Immediate', 'Immediate employment', 'As soon as possible.', 'Immediate job opportunity',\n",
+    "             '\"Immediate employment, after passing the interview.\"',\n",
+    "             'ASAP preferred', 'Employment contract signature date',\n",
+    "             'Immediate employment opportunity', 'Immidiately', 'ASA',\n",
+    "             'Asap', '\"The position is open immediately but has a flexible start date depending on the candidates earliest availability.\"',\n",
+    "             'Immediately upon agreement', '20 November 2014 or ASAP',\n",
+    "             'immediately', 'Immediatelly',\n",
+    "             '\"Immediately upon selection or no later than November 15, 2009.\"',\n",
+    "             'Immediate job opening', 'Immediate hiring', 'Upon selection',\n",
+    "             'As soon as practical', 'Immadiate', 'As soon as posible',\n",
+    "             'Immediately with 2 months probation period',\n",
+    "             '12 November 2012 or ASAP', 'Immediate employment after passing the interview',\n",
+    "             'Immediately/ upon agreement', '01 September 2014 or ASAP',\n",
+    "             'Immediately or as per agreement', 'as soon as possible',\n",
+    "             'As soon as Possible', 'in the nearest future', 'immediate',\n",
+    "             '01 April 2014 or ASAP', 'Immidiatly', 'Urgent',\n",
+    "             'Immediate or earliest possible', 'Immediate hire',\n",
+    "             'Earliest  possible', 'ASAP with 3 months probation period.',\n",
+    "             'Immediate employment opportunity.', 'Immediate employment.',\n",
+    "             'Immidietly', 'Imminent', 'September 2014 or ASAP', 'Imediately']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for to_replace in asap_list:\n",
+    "    df_clean.StartDate.replace(to_replace, 'ASAP', inplace = True)"
+   ]
   },
   {
    "cell_type": "markdown",
